Fix tweet button truncation on mobile

--- a/src/artichoke.css
+++ b/src/artichoke.css
@@ -11,7 +11,7 @@
 
 .header-tweet {
   align-self: flex-start;
-  width: 50%;
+  min-width: 100%;
 }
 
 .header-logo {
